--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,8 @@ path = "src/jit.rs"
 
 [dependencies]
 libc = "*"
+bitflags = "*"
 
 [dependencies.libjit-sys]
 path = "sys"
-version = "*"
-
-[dev-dependencies.jit_macros]
-path = "macro"
 version = "*"
